--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TravelMate</title>
+    <meta name="description" content="TravelMate - 您的專屬旅遊規劃管理專家。輕鬆規劃行程、管理費用並與朋友分享旅程。" />
+    <meta property="og:title" content="TravelMate - 您的專屬旅遊夥伴" />
+    <meta property="og:description" content="輕鬆規劃行程、管理費用並與朋友分享旅程。" />
+    <meta property="og:image" content="/logo.png" />
+    <title>TravelMate - 您的專屬旅遊夥伴</title>
   </head>
   <body>
     <div id="app"></div>
